2009-03-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	For PR automake/533:
	DISTFILES containing a directory and files in that directory.
	When the source tree contains non-writable files or directories
	(as happens during distcheck), and directories or entries
	thereof are listed multiple times in variables to be
	distributed, then the corresponding directories below $(distdir)
	need to be made writable recursively.  Since file modes should
	not change, they need to be copied recursively using `cp -f'.
	* lib/am/distdir.am: Handle this situation.
	* tests/distdir.test: Extend test to those cases.
	* NEWS: Update.
	Report by Peter Breitenlohner.

2009-03-22  Jim Meyering  <meyering@redhat.com>

	Fix a documentation typo.
	* doc/automake.texi (Headers): Clarify the note telling when it's
	better not to use noinst_HEADERS.

2009-03-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Define AM_RECURSIVE_TARGETS, for gnulib's GNUmakefile.
	This new macro lists all public targets which invoke `make'
	recursively, or depend on targets which do so.  It allows to
	prevent parallelism selectively, when multiple targets are
	passed on the `make' command line.
	* lib/am/distdir.am [%?SUBDIRS%] (AM_RECURSIVE_TARGETS): New
	macro.
	* lib/am/subdirs.am (AM_RECURSIVE_TARGETS): Likewise.
	* lib/am/tags.am [%?SUBDIRS%] (AM_RECURSIVE_TARGETS):
	Likewise.

2009-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Update.

2009-03-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Ignore warnings from autom4te about Libtool macros.
	* tests/ltinstloc.test: When testing for presence of warnings,
	filter out any that are not interesting for this test, e.g.,
	warnings about installed files or about bogusly named cache
	variables in libtool.m4, emitted by recent Autoconf when older
	Libtool is used.

2009-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Relax depcomp test for MSVC to not require minuso.