@@ -155,6 +155,7 @@ Johannes Nicolai	johannes.nicolai@student.hpi.uni-potsdam.de
 John F Trudeau		JohnTrudeau@firsthealth.com
 John Pierce		hawkfan@pyrotechnics.com
 John Ratliff		autoconf@technoplaza.net
+John R. Cary		cary@txcorp.com
 John W. Coomes		jcoomes@eng.Sun.COM
 Josh MacDonald		jmacd@cs.berkeley.edu
 Joshua Cowan		jcowan@jcowan.reslife.okstate.edu
