@@ -920,6 +920,7 @@ register_language ('name' => 'fc',
 		   'compiler' => 'FCCOMPILE',
 		   'compile_flag' => '-c',
 		   'output_flag' => '-o',
+		   'libtool_tag' => 'FC',
 		   'lder' => 'FCLD',
 		   'ld' => '$(FC)',
 		   'pure' => 1,
