@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2006  Free Software Foundation, Inc.
+# Copyright (C) 2006, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -83,6 +83,9 @@ $AUTOCONF
 # have the LT_PREREQ macro to cause autoconf failure, so let's
 # skip in this case:
 grep LT_PREREQ configure && Exit 77
+
+# Ensure we use --tag for f90, too.
+grep " --tag=FC" Makefile.in
 
 # configure may Exit 77 if no compiler is found,
 # or if the compiler cannot compile Fortran 90 files).
