@@ -1,3 +1,11 @@
+2009-03-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Use --tag=FC with libtool also for .f90 files.
+	* automake.in: Set 'libtool_tag' for language `fc'.
+	* tests/fort5.test: Grep for the tag.
+	* THANKS: Update.
+	Report by John R. Cary.
+
 2009-03-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
